--- a/package.json
+++ b/package.json
@@ -54,5 +54,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "https://serene-beach-26832.herokuapp.com/"
 }
