Package.json update

--- a/package.json
+++ b/package.json
@@ -29,13 +29,10 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "dev": "react-scripts start",
-    "web": "node server/src/index.js",
     "start": "react-scripts start",
-    "build": "react-scripts build mv build server/src/public",
+    "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "heroku-postbuild": "npm run build or yarn run build "
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
